# energy-gateway

./: .gitignore  README.md
fritzing/: uart_connection.fzz
micropython_serial_io/: main.py  pymakr.conf  uart.py
ota/: sdkconfig.old
ota/main/: CMakeLists.txt  advanced_https_ota_example.c
provisioning/: CMakeLists.txt  sdkconfig  sdkconfig.old
report_latex/: 1DT304_Enström_Olof_Eid_Christoffer_FinalReport.tex  LNU_ReportTemplate.tex  bibliography.bib  config.tex
report_latex/chapters/: abstract.tex  analytical_process.tex  appendix.tex  background.tex  conclusion.tex  discussion.tex  introduction.tex  method.tex  methods.tex  results.tex
src/: .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.defaults  sdkconfig.old
src/components/energy_gateway_ota/: CMakeLists.txt  Kconfig.projbuild  energy_gateway_ota.c
src/components/energy_gateway_ota/include/: energy_gateway_ota.h
src/components/energy_gateway_ota/test_certs/: server_cert.pem
src/components/energy_gateway_provisioning/: CMakeLists.txt  Kconfig.projbuild  energy_gateway_provisioning.c
src/components/energy_gateway_provisioning/include/: energy_gateway_provisioning.h
src/components/energy_gateway_uart/: CMakeLists.txt  Kconfig.projbuild  energy_gateway_uart.c
src/components/energy_gateway_uart/include/: energy_gateway_uart.h
src/main/: CMakeLists.txt  main.c
